Remove `fault_ep_slot` as a symbolic slot.
This was legacy support for fault endpoints, which has now been deprecated in
favour of fault endpoints as extra TCB information.

JIRA VER-348

--- a/doc/capDL.tex
+++ b/doc/capDL.tex
@@ -232,7 +232,7 @@ This section describes the concrete syntax of capDL using the tokens defined abo
 
   slot ::= number | symbolic_slot
   symbolic_slot ::= 'cspace' | 'vspace' | 'reply_slot' | 'caller_slot' |
-                    'ipc_buffer_slot' | 'fault_ep_slot'
+                    'ipc_buffer_slot'
 
   cap_decl ::= name_ref '{' (cap_mapping_or_ref ';'?)* '}'
 
